// Vitest Snapshot v1

exports[`Skeleton > should render correctly 1`] = `
<div>
  <div
    class="skeleton-pulse h-6 w-full rounded-md rapid-skeleton"
  />
</div>
`;

exports[`Skeleton > should render correctly with props 1`] = `
<div>
  <div
    class="skeleton-pulse-fast h-6 w-full rounded-md custom-class rapid-skeleton"
  />
</div>
`;

exports[`Skeleton > should render correctly with props 2`] = `
<div>
  <div
    class="h-6 w-full rounded-md rapid-skeleton"
  />
</div>
`;
